// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Divider passes the snapshot test in dark mode 1`] = `
Array [
  <View
    length="100%"
    style={
      Object {
        "backgroundColor": "#1A2138",
        "display": "flex",
        "flex": null,
        "height": 1,
        "width": "100%",
      }
    }
    thickness={1}
  />,
  <View
    length="100%"
    style={
      Object {
        "backgroundColor": "#1A2138",
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "width": 1,
      }
    }
    thickness={1}
  />,
]
`;

exports[`Atoms/Divider passes the snapshot test in light mode 1`] = `
Array [
  <View
    length="100%"
    style={
      Object {
        "backgroundColor": "#E4E9F2",
        "display": "flex",
        "flex": null,
        "height": 1,
        "width": "100%",
      }
    }
    thickness={1}
  />,
  <View
    length="100%"
    style={
      Object {
        "backgroundColor": "#E4E9F2",
        "display": "flex",
        "flex": 1,
        "height": "100%",
        "width": 1,
      }
    }
    thickness={1}
  />,
]
`;
